# tracy

./: Cargo.toml  README.md
data/shaders/: accum.wgsl  blit.wgsl  bokeh.wgsl  brdf.wgsl  constants.wgsl  env_cdf.wgsl  full_screen_vert.wgsl  intersection.wgsl  lines.wgsl  pathtrace.wgsl  rand.wgsl  ray.wgsl  sample_env.wgsl  sampling.wgsl  scene_data.wgsl  tonemap.wgsl  unlit.wgsl
data/textures/: hdr1.exr
src/: gpu_resource.rs  main.rs  math.rs  mesh.rs  path.rs  path_tracing.rs  thread_pool.rs  wgsl_preprocessor.rs
src/bvh/: bounds.rs  mod.rs
src/pipeline/: accum.rs  bvh_visual.rs  env_cdf.rs  mod.rs  tonemap.rs
src/scene/: mod.rs  registry.rs  resource.rs  scene.rs
