[package]
name = "tracy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "^0.2.5"
env_logger = "0.9"
log = "0.4"
egui-wgpu = "0.21"
once_cell = "1.17"
regex = "1.8"
bytemuck = { version = "1.4", features = ["derive"] }
cgmath = "0.18.0"
tobj = "4.0"
bitflags = "1.3.2"
rfd = "^0.11"

[dependencies.image]
version = "0.24.5"
default-features = false
features = [
	"jpeg",
	"png",
	"hdr",
	"exr"
]

[dependencies.eframe]
version = "0.21"
default-features = false
features = [
	"accesskit",
	"default_fonts",
	"wgpu"
]